@@ -8,6 +8,7 @@
 - extra code updates (mamba)
 - Short syntax in array literals (mamba)
 - added forumDescription to viewforum.php (aerograf/mamba)
+- namespaces, autoload (mamba)
 
 4.33 RC 13  (XOOPS 2.5.8)      (NOT RELEASED)
 ===========================================
